--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>        
-        <title>Snake</title>
-        <link rel="stylesheet" type="text/css"  href="../CSS/index.css"> 
-    </head>
-    <body>
-        <div class="title">
-            <h1>Snake</h1> 
-        </div>       
-        <hr>
-        <script src= "../javaScript/script.js"></script>
-    </body>
+
+<head>
+    <link rel="StyleSheet" type="text/css" href="../CSS/index.css">
+    <title>Snake game</title>
+</head>
+
+<body>
+    <div class=" container ">
+        <header>
+            <div class="title ">
+                <h1>The famous snake arcade game in JavaScript</h1>
+            </div>
+        </header>
+
+        <div class="body ">
+            <div class="snake">
+                <img src=" ../img/snake.png " alt="Snake ">
+            </div>
+            <div class="apple">
+                <img src="../img/apple.jpg " alt="apple ">
+            </div>
+            <h2>How to play :</h2>
+
+            <p>Control the snake with ↑ → ↓ ← to help it eat the apples to grow. The goal of the game is to eat as many apples as possible while avoiding that the snake touches the edges of the canvas or bites itself otherwise you lose the game
+            </p>
+        </div>
+    </div>
+
+    <script src="../javaScript/script.js "></script>
+</body>
+
 </html>
